Fix eslint linting esm and commonjs extensions.

--- a/libs/tsconfig/package.json
+++ b/libs/tsconfig/package.json
@@ -1,9 +1,16 @@
 {
+	"dependencies": {
+		"@web/eslint-config-based": "workspace:*"
+	},
+	"devDependencies": {
+		"eslint": "latest",
+		"eslint-define-config": "latest"
+	},
 	"files": [
 		"base.json",
+		"eslint.json",
 		"nextjs.json",
-		"react-library.json",
-		"eslint.json"
+		"react-library.json"
 	],
 	"name": "@web/tsconfig",
 	"private": true,
