--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,16 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
 node_modules
-.pnp
-.pnp.js
-
-# testing
 coverage
 
-# next.js
-.next/
-out/
-build
+**/.next/
+**/out
+**/build
+**/dist
+
+.yarn/**
+**/.yarn/**/*
+
+**/.svelte-kit/
 
 # misc
 .DS_Store
@@ -31,7 +30,3 @@ yarn-error.log*
 
 # turbo
 .turbo
-
-**/.yarn/
-**/dist/
-**/.svelte-kit/
