--- a/apps/zip pilates/tsconfig.json
+++ b/apps/zip pilates/tsconfig.json
@@ -1,5 +1,5 @@
 {
 	"exclude": ["node_modules"],
-	"extends": "tsconfig/base",
+	"extends": "@web/tsconfig/base",
 	"include": ["**/*.ts", "**/*.tsx", "next-env.d.ts", "reset.d.ts"]
 }
