--- a/libs/eslint-config-based/package.json
+++ b/libs/eslint-config-based/package.json
@@ -15,22 +15,24 @@
 		"eslint-plugin-canonical": "latest",
 		"eslint-plugin-css": "latest",
 		"eslint-plugin-destructuring": "latest",
+		"eslint-plugin-etc": "latest",
 		"eslint-plugin-filename-rules": "latest",
 		"eslint-plugin-functional": "latest",
 		"eslint-plugin-import": "latest",
 		"eslint-plugin-jsonc": "latest",
 		"eslint-plugin-jsx-a11y": "latest",
+		"eslint-plugin-package-json-dependencies": "latest",
 		"eslint-plugin-playwright": "latest",
 		"eslint-plugin-prettier": "latest",
 		"eslint-plugin-promise": "latest",
 		"eslint-plugin-react": "7.31.8",
 		"eslint-plugin-react-hooks": "latest",
+		"eslint-plugin-react-perf": "latest",
 		"eslint-plugin-regexp": "latest",
 		"eslint-plugin-simple-import-sort": "latest",
 		"eslint-plugin-sort": "latest",
 		"eslint-plugin-sort-class-members": "latest",
 		"eslint-plugin-sort-destructure-keys": "latest",
-		"eslint-plugin-sort-keys-fix": "latest",
 		"eslint-plugin-sort-react-dependency-arrays": "latest",
 		"eslint-plugin-storybook": "latest",
 		"eslint-plugin-tailwindcss": "latest",
@@ -53,6 +55,7 @@
 		"./javascript": "./src/bases/javascript.js",
 		"./json": "./src/bases/json.js",
 		"./next": "./src/bases/next.js",
+		"./package-json": "./src/bases/package-json.js",
 		"./playwright": "./src/bases/playwright.js",
 		"./react": "./src/bases/react.js",
 		"./regex": "./src/bases/regex.js",
