--- a/apps/zip pilates/package.json
+++ b/apps/zip pilates/package.json
@@ -1,25 +1,32 @@
 {
 	"dependencies": {
 		"@web/eslint-config-based": "workspace:^",
-		"@web/ui-react": "*",
+		"@web/ui-react": "workspace:^",
 		"next": "^13.1.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.0.0",
-		"@total-typescript/ts-reset": "latest",
+		"@svgr/plugin-prettier": "^6.5.1",
+		"@svgr/webpack": "^6.5.1",
+		"@total-typescript/ts-reset": "^0.4.2",
 		"@twind/core": "^1.1.3",
 		"@twind/preset-autoprefix": "^1.0.7",
 		"@twind/preset-tailwind": "^1.1.4",
 		"@twind/with-next": "^1.2.2",
+		"@types/eslint": "latest",
 		"@types/node": "^17.0.12",
 		"@types/react": "^18.0.22",
 		"@types/react-dom": "^18.0.7",
 		"@web/tsconfig": "workspace:^",
+		"clsx": "^1.2.1",
 		"eslint": "7.32.0",
-		"eslint-plugin-prettier": "latest",
-		"typescript": "latest"
+		"eslint-plugin-prettier": "^4.2.1",
+		"framer-motion": "^10.2.3",
+		"react-icons": "^4.8.0",
+		"typescript": "^4.9.5",
+		"usehooks-ts": "latest"
 	},
 	"name": "@web/zip-pilates",
 	"private": true,
@@ -27,7 +34,8 @@
 		"build": "next build",
 		"dev": "next dev",
 		"lint": "next lint",
-		"start": "next start"
+		"start": "next start",
+		"types:watch": "tsc --project tsconfig.json --noemit --watch"
 	},
 	"type": "module",
 	"version": "0.0.0"
