--- a/apps/svelte-app/tsconfig.json
+++ b/apps/svelte-app/tsconfig.json
@@ -3,6 +3,6 @@
 		"outDir": "./dist/"
 	},
 	"exclude": ["./dist/"],
-	"extends": "../../tsconfig.json",
+	"extends": "@web/tsconfig/base",
 	"include": [".storybook/*", "src/*"]
 }
