--- a/apps/zip pilates/package.json
+++ b/apps/zip pilates/package.json
@@ -1,5 +1,6 @@
 {
 	"dependencies": {
+		"@next/bundle-analyzer": "^13.2.4",
 		"@web/eslint-config-based": "workspace:^",
 		"@web/ui-react": "workspace:^",
 		"next": "^13.1.1",
@@ -8,11 +9,9 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.0.0",
-		"@svgr/plugin-prettier": "^6.5.1",
 		"@svgr/webpack": "^6.5.1",
 		"@total-typescript/ts-reset": "^0.4.2",
 		"@twind/core": "^1.1.3",
-		"@twind/preset-autoprefix": "^1.0.7",
 		"@twind/preset-tailwind": "^1.1.4",
 		"@twind/with-next": "^1.2.2",
 		"@types/eslint": "latest",
@@ -20,13 +19,18 @@
 		"@types/react": "^18.0.22",
 		"@types/react-dom": "^18.0.7",
 		"@web/tsconfig": "workspace:^",
+		"autoprefixer": "latest",
 		"clsx": "^1.2.1",
 		"eslint": "7.32.0",
-		"eslint-plugin-prettier": "^4.2.1",
 		"framer-motion": "^10.2.3",
+		"postcss": "latest",
+		"postcss-logical": "^6.1.0",
+		"postcss-preset-env": "latest",
 		"react-icons": "^4.8.0",
+		"tailwindcss": "latest",
 		"typescript": "^4.9.5",
-		"usehooks-ts": "latest"
+		"usehooks-ts": "latest",
+		"zustand": "latest"
 	},
 	"name": "@web/zip-pilates",
 	"private": true,
