--- a/apps/zip pilates/tsconfig.eslint.json
+++ b/apps/zip pilates/tsconfig.eslint.json
@@ -1,5 +1,15 @@
 {
 	"extends": "./tsconfig.json",
 	"exclude": ["node_modules"],
-	"include": ["src", "*.json", "*.ts", "*.js", ".eslintrc.cjs", "*.tsx"]
+	"include": [
+		"src",
+		"*.json",
+		"*.ts",
+		"*.js",
+		".eslintrc.cjs",
+		"*.tsx",
+		"postcss.config.cjs",
+		"./public/vectors/bg-pattern.svg",
+		"tailwind.config.cjs"
+	]
 }
