--- a/apps/zip pilates/tsconfig.json
+++ b/apps/zip pilates/tsconfig.json
@@ -9,5 +9,5 @@
 			"public/*": ["public/*"]
 		}
 	},
-	"include": ["src", "next-env.d.ts", "reset.d.ts"]
+	"include": ["src", "next-env.d.ts", "reset.d.ts", "twind.config.ts"]
 }
