--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,10 @@ coverage
 **/build
 **/dist
 
+.yarn/install-state.gz
+**/.yarn/install-state.gz
 .yarn/**
-**/.yarn/**/*
+**/.yarn/**
 
 **/.svelte-kit/
 
@@ -30,3 +32,4 @@ yarn-error.log*
 
 # turbo
 .turbo
+.yarn/install-state.gz
