--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
 	"devDependencies": {
-		"@web/eslint-config-based": "workspace:^",
-		"@web/tsconfig": "workspace:^",
+		"@web/eslint-config-based": "workspace:*",
 		"eslint-define-config": "latest",
-		"prettier": "latest",
-		"turbo": "latest",
-		"typescript": "latest"
+		"turbo": "latest"
 	},
 	"engines": {
 		"node": ">=14.0.0"
 	},
 	"name": "@web/monorepo",
-	"packageManager": "yarn@3.4.1",
+	"packageManager": "pnpm@8.3.1",
 	"private": true,
 	"scripts": {
 		"build": "turbo run build",
@@ -21,9 +18,7 @@
 	},
 	"type": "module",
 	"version": "0.1.0",
-	"workspaces": [
-		"./",
-		"apps/*",
-		"libs/*"
-	]
+	"volta": {
+		"node": "18.16.0"
+	}
 }
