--- a/libs/eslint-config-strict/package.json
+++ b/libs/eslint-config-strict/package.json
@@ -5,7 +5,6 @@
 		"@rushstack/eslint-patch": "latest",
 		"@types/node": "latest",
 		"@types/prettier": "latest",
-		"@types/react": "latest",
 		"@typescript-eslint/eslint-plugin": "latest",
 		"@typescript-eslint/parser": "latest",
 		"eslint": "latest",
@@ -25,7 +24,7 @@
 		"eslint-plugin-playwright": "latest",
 		"eslint-plugin-prettier": "latest",
 		"eslint-plugin-promise": "latest",
-		"eslint-plugin-react": "7.31.8",
+		"eslint-plugin-react": "latest",
 		"eslint-plugin-react-hooks": "latest",
 		"eslint-plugin-react-perf": "latest",
 		"eslint-plugin-regexp": "latest",
@@ -38,13 +37,12 @@
 		"eslint-plugin-tailwindcss": "latest",
 		"eslint-plugin-testing-library": "latest",
 		"eslint-plugin-typescript-sort-keys": "latest",
-		"eslint-plugin-unicorn": "46.0.0",
+		"eslint-plugin-unicorn": "latest",
 		"eslint-plugin-unused-imports": "latest",
 		"eslint-plugin-vitest": "latest",
 		"eslint-plugin-vitest-globals": "latest",
 		"prettier": "latest",
-		"react": "latest",
-		"typescript": "latest"
+		"typescript": "^5.0.4"
 	},
 	"exports": {
 		".": "./src/index.js",
@@ -67,9 +65,10 @@
 	},
 	"license": "MIT",
 	"main": "src/index.js",
-	"name": "@web/eslint-config-based",
+	"name": "@m1tyya/eslint-config-strict",
+	"private": false,
 	"scripts": {
-		"lint": "eslint  --ext .ts,.js,.cjs,.mjs"
+		"lint": "eslint"
 	},
 	"type": "commonjs",
 	"version": "0.1.0"
