--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
 	"devDependencies": {
-		"@web/eslint-config-based": "workspace:*",
+		"@m1tyya/eslint-config-strict": "workspace:*",
 		"eslint-define-config": "latest",
 		"turbo": "latest"
 	},
 	"engines": {
 		"node": ">=14.0.0"
 	},
-	"name": "@web/monorepo",
+	"name": "@m1tyya/monorepo",
 	"packageManager": "pnpm@8.3.1",
 	"private": true,
 	"scripts": {
