--- a/libs/ui-react/tsconfig.eslint.json
+++ b/libs/ui-react/tsconfig.eslint.json
@@ -1,7 +1,7 @@
 {
-	"extends": "./tsconfig.json",
 	"compilerOptions": {
 		"noEmit": true
 	},
-	"include": ["src", ".eslintrc.cjs", "*.json", "vite.config.ts"]
+	"extends": "./tsconfig.json",
+	"include": ["*.json", ".eslintrc.cjs", "src", "vite.config.ts"]
 }
