Fix map API key.

--- a/apps/zip pilates/tsconfig.json
+++ b/apps/zip pilates/tsconfig.json
@@ -7,7 +7,8 @@
 			"~": ["src"],
 			"~/*": ["src/*"],
 			"public/*": ["public/*"]
-		}
+		},
+		"noEmit": true
 	},
 	"include": ["src", "next-env.d.ts", "reset.d.ts", "twind.config.ts"]
 }
