--- a/apps/zip pilates/package.json
+++ b/apps/zip pilates/package.json
@@ -36,9 +36,10 @@
 		"postcss-preset-env": "latest",
 		"react-icons": "^4.8.0",
 		"tailwindcss": "latest",
-		"typescript": "^4.9.5",
+		"typescript": "latest",
 		"usehooks-ts": "latest",
-		"zustand": "latest"
+		"zustand": "latest",
+		"zod": "latest"
 	},
 	"name": "@m1tyya/zip-pilates",
 	"private": true,
